data/derived/comb/progs/unify/prog7144.ml.out
Characters 94-97:
  else returnList :: (1) 
                     ^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
